# My_C_like_compiler

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix
exemple_files/: input03  input04
include/lexer/: data.h  lexer.h  lexerData.h  scan.h  token.h  utils.h
include/parser/: ast.h  interpreter.h  parser.h  parserData.h
include/token/: token.h  tokenList.h
include/utils/: utils.h
scripts/: build_test_cov.sh  proj_build  proj_coverage  proj_run  proj_test
src/: CMakeLists.txt  main.c  utils.c
src/lexer/: data.c  lexer.c  lexerData.c  scan.c  token.c
src/parser/: ast.c  interpreter.c  parser.c  parserData.c
src/token/: token.c  tokenList.c
src/utils/: utils.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/mocks/: malloc_mock.c  malloc_mock.h
tests/test_files/: input00  input02  input03  input04
tests/units/: CMakeLists.txt  test_lexer.c  test_main.c  test_token.c  test_utils.c
