# add_executable(integration_tests
    
# )

# target_link_libraries(integration_tests
#     PRIVATE
    
#     ${CHECK_LIBRARIES}
# )

# target_include_directories(integration_tests
#     PRIVATE
#     ${CMAKE_SOURCE_DIR}/include/*
#     ${CHECK_INCLUDE_DIRS}
# )

# add_test(NAME integration_tests COMMAND integration_tests)